feat(external): remove all spigot dependency to permits multiplatform